# owencli

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT_OS_TECHNICAL_PLAN.md  IMPLEMENTATION_STEPS.md  INTERVIEW_PRODUCT_PRD.md  MEMORY_USAGE_GUIDE.md  README.md  agent-interview-qa.md  deerflow-memory-architecture.md  memory_comparison_report_20260622_093243.json  memory_comparison_report_20260622_094830.json  memory_comparison_report_20260622_102155.json  memory_comparison_report_20260622_103719.json  memory_comparison_report_20260709_180249.json  memory_comparison_report_20260709_181313.json  pyproject.toml
.claude/: settings.local.json
.git-rewrite/t/: .gitignore
benchmark/: __init__.py  agents.py  assertions.py  benchmark_runner.py  enhanced_assertions.py  evaluator.py  metrics.py  observer.py  reporter.py  run.py  visualization.py
benchmark/datasets/: __init__.py  intent_cases.py  memory_cases.py  rag_cases.py  tool_cases.py  workflow_cases.py
benchmark/reports/: benchmark_report_20260711_042554.html  benchmark_report_20260711_042554.json  benchmark_report_20260711_193132.html  benchmark_report_20260711_193132.json
claude_codex_mcp/: __init__.py  claude_settings.example.json  server.py  trae_settings.example.json
context_os/: ARCHITECTURE_ANALYSIS.md  __init__.py  config.yaml  entry.py  pipeline.py
context_os/agent/: __init__.py
context_os/builder/: builder.py  merger.py
context_os/collection/: conversation.py  environment.py  identity.py
context_os/config/: __init__.py  app_config.py  config_manager.py
context_os/core/: __init__.py  base.py  errors.py  logger.py  models.py
context_os/events/: __init__.py  (+2 more)
docs/: JOURNAL_DRIVEN_MEMORY.md  LTM_WRITE_STRATEGY.md  MEMORY_ARCHITECTURE.md  MEMORY_SYSTEM_DESIGN.md
examples/: basic_pipeline.py  custom_adapter.py  download_longmemeval.py  longmemeval_benchmark.py  memory_comparison.py
java-context-os/: OPTIMIZATION_PLAN.md  config.yaml  pom.xml
results/: lme_memory_20260622_111227.jsonl  lme_memory_20260622_134443.jsonl  lme_memory_20260622_144708.jsonl  lme_memory_20260622_150512.jsonl  lme_memory_20260622_165125.jsonl  lme_memory_20260623_091659.jsonl  lme_simple_20260622_165125.jsonl  lme_simple_20260623_091659.jsonl  longmemeval_result_20260622_111227.json  longmemeval_result_20260622_134443.json  longmemeval_result_20260622_144708.json  longmemeval_result_20260622_150512.json  longmemeval_result_20260622_165125.json  longmemeval_result_20260623_091659.json  memoryos_bench_result_20260624_214556.json  memoryos_bench_result_20260624_215219.json  memoryos_bench_result_20260624_220651.json  memoryos_bench_result_20260624_220703.json
scripts/: migrate_memory.py
tests/: conftest.py
面试/: ask.md
(+272 files in other folders)
