[project]
name = "context-os"
version = "0.1.0"
description = "Context-OS: AI Agent Context Management System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.30",
    "openai>=1.0",
    "tiktoken>=0.5",
    "numpy>=1.24",
    "httpx>=0.25",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
vector = [
    "chromadb>=0.4",
    "qdrant-client>=1.0",
]
graph = [
    "neo4j>=5.0",
]
trace = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
